# data-sythesis-research

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  TODO_STYLE.md  WORK_LOG.md  clean_phish_dataset.py  evaluate_phish_ppl.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.lock.txt  search.html  searchindex.js  setup.sh
.github/workflows/: ci.yaml  deploy-sphinx.yml
WORK_LOG/: WORK_LOG.md
_sources/: index.rst.txt
_sources/design/: readme.md.txt  rule-guided_diffusion.md.txt
_sources/start/: readme.md.txt
configs/: TEMPLATE.yaml  config.yaml
configs/data/: default.yaml
configs/data/dataset/: cnn-dailymail.yaml  openwebtext-modern.yaml  phish-email.yaml  wikitext103.yaml
configs/dataset/: openwebtext-modern.yaml  openwebtext.yaml
configs/model/: medium.yaml  small-raw.yaml  small.yaml  transformer_medium.yaml  transformer_small.yaml
configs/phase/: finetune.yaml  pretrain.yaml
configs/train/: base.yaml
configs/worker/: fir.yaml  gpuserver.yaml  test_fir.yaml
datasets/: README.md
design/: datasets.html  readme.html  rule-guided_diffusion.html
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/design/: datasets.md  readme.md  rule-guided_diffusion.md
docs/source/start/: codestyle.rst  install.rst  quickstart.rst  test.md
docs/source/tools/: diffusers.md
notebooks/: EDA.ipynb
pretrained_model/louaaron/: sedd-medium  sedd-small
scripts/: eval.sh  sample.sh  train.sh
src/: README.md  catsample.py  data.py  graph_lib.py  load_model.py  losses.py  noise_lib.py  run_sample.py  run_sample_cond.py  run_train.py  sampling.py  train.py  utils.py
src/data_process/: README.md  clean_factory.py  data.py  dataset_factory.py  detokenizer_factory.py  entry_processor_factory.py  phish_extract.ipynb
src/data_process/llm/: style_caption.py
src/detection_model/: augmented_from_caption.jsonl  caption.txt  caption_cluster_id_0.txt  compute_similarity.py  config_detect.yaml  eval.py  eval.sh  extract_description.py  generate_augment.py  masked_train.py  masked_train.sh  train.py  train.sh  train_arbutus.sh  train_gpu.sh  train_with_augment.py
src/dsr/: __init__.py
src/dsr/cli/: __init__.py  load_model.py  sample.py  train.py
src/dsr/data/: __init__.py  datamodule.py  preprocess.py
src/dsr/models/: __init__.py  ema.py  sedd.py  transformer.py
src/dsr/models/components/: __init__.py
src/dsr/models/sedd/: __init__.py  config.py  model.py
src/dsr/models/training/: __init__.py  ema.py
src/dsr/train/: __init__.py  evaluator.py  sampler.py  train_loop.py
src/dsr/utils/: __init__.py  dist.py  graph_noise.py  logging.py
src/kernel/: fused_add_dropout_scale.py
src/metric/: aliment.py  test_alignment_score.py
src/model/: __init__.py  caption_encoder.py  encoder.py  fused_add_dropout_scale.py  graph_lib.py  graph_lib_raw.py  noise_lib.py  rotary.py  transformer.py  transformer_old.py  transformer_raw.py  utils.py  utils_raw.py
src/models/: mlp.py
src/sample/: catsample.py  eval_sample.sh  load_model.py  run_sample.py  run_sample_cond.py  run_toy_sample.py  sampling.py  sampling_raw.py
src/scripts/: dataset_eval.py  dataset_statistics.py  test_fir.sh  train.sh  train_fir.sh  visualize_cross_attn.py
src/tests/: test_data_loading.py
src/train/: losses.py  losses_raw.py  optimizers.py  run_train.py  train.py
src/utils/: eval_factory.py  tokenizer_factory.py  utils.py
start/: codestyle.html  install.html  quickstart.html  readme.html
tests/: READEM.md  test_smoke.py
tests/data/: test_dataloaders.py  test_dataset_loading.py
tests/model/: test_mlp.py
tests/models/: test_mlp.py
tools/: diffusers.html
