# ==============================================================================
#                              Build System Configuration
# ==============================================================================
# This section tells build tools (like pip) how to build your project.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ==============================================================================
#                            Project Metadata (PEP 621)
# ==============================================================================
# This is the core information about your project.
[project]
# --- Basic Information ---
name = "data-synthesis-research"
version = "0.1.0"
description = "A project for synthesizing tabular or image data using neural networks (e.g., GANs, VAEs)."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- Core Dependencies ---
dependencies = [
    "torch",
    "numpy",
    "torchvision",
    "torchaudio",
    "pandas",
    "datasets",
    "scikit-learn",
    "einops",
    "huggingface_hub",
    "tqdm",
    "pyyaml",
    "OmegaConf",
    "hydra-core",
    "hydra-submitit-launcher",
    "transformers",
    "requests",
    # Disable due to CI test support issues. Must be installed manually.
    # 'uv pip install flash-attn --no-build-isolation'
    # "flash-attn>=2.8.3",
    "tensorboard>=2.20.0",
    "sentence-transformers>=5.1.2",
    "accelerate>=1.10.1",
    "setuptools<81",
    "matplotlib>=3.9.4",
    "mauve-text>=0.4.0",
    "hdbscan>=0.8.41",
]

# --- Project URLs (Optional) ---
[project.urls]
Homepage = "https://github.com/your-username/your-repo"
Repository = "https://github.com/your-username/your-repo"
"Bug Tracker" = "https://github.com/your-username/your-repo/issues"

[project.scripts]
ds-run = "run_sample:main"

# ==============================================================================
#                        Optional Dependencies (Extras)
# ==============================================================================
# Group dependencies for development, testing, docs, etc.
[project.optional-dependencies]
# For development tools: pip install -e ".[dev]"
dev = [
    "ruff",         # Linter and formatter
    "pytest",       # Testing framework
    "pytest-cov",   # Test coverage
    "pre-commit",   # Git pre-commit hooks
    "mypy",         # Static type checker
    "pyink",        # Code formatter
]

# For data exploration: pip install -e ".[notebook]"
notebook = [
    "jupyterlab",
    "matplotlib",
    "seaborn",
]

# For building documentation: pip install -e ".[docs]"
docs = [
    "sphinx",
    "myst-parser",
]

# ==============================================================================
#                           Setuptools Configuration
# ==============================================================================
# This section configures the build backend (setuptools).
[tool.setuptools]
package-dir = {"" = "src"}


# ==============================================================================
#                              Tool Configuration
# ==============================================================================

# --- Ruff (Linter & Formatter) ---
[tool.ruff]
target-version = "py311"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["llamafactory"]
known-third-party = [
    "accelerate",
    "datasets",
    "gradio",
    "numpy",
    "peft",
    "torch",
    "transformers",
    "trl"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
# Add the 'src' directory to the python path so imports work correctly.
pythonpath = ["src"]
# -ra: report extra test summary info. -q: quiet mode.
addopts = "-ra -q"

[tool.pyink]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false
preview = true
# Exclude certain directories from being formatted
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.venv
  )/
)
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyink>=24.10.1",
]
